<resources>
    <string name="app_name">Water delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wwater">wwater</string>
    <string name="water_delivery">Water delivery</string>
    <string name="water_note">We deliver water at any point of the Earth in 30 minutes</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="name">Full Name</string>
</resources>