<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_blue"
    tools:context=".WelcomeFragment">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/text_size_20sp"
        android:text="@string/wwater"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_delivery"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/lato_black"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="350dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_note"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/lato_regular"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginStart"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:textColor="@color/blue"
        style="@style/Button.NoCaps.Radius16"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginStart"
        android:layout_marginTop="50dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        style="@style/Button.NoCaps.Radius32"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginEnd="@dimen/marginStart"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="40dp"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>